tdf#113052 needs mpUIBuilder to load breaklistmenu

The mpUIBuilder object is also used in the else branch,
so move the creation in the outer scope.

Change-Id: I18211bbe3c6f85cdd7697225159a98ad672a4ce2
(cherry picked from commit 7f7ed0260ab7e08401f0129cde312cd8aa0fbddf)
Reviewed-on: https://gerrit.libreoffice.org/43330
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>